umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_bo.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: false
  error:
    error_type: ValenceAmbiguous
    message: "Valence ambiguous for atom O at index 1 has 3 valence matches: {O/2v2}, {O/1v2a2}, {O+/1v2a1}"
counts:
  success: true
  summary:
    atom_count: 2
    bond_count: 1
    topology: A_
    atoms:
      - "{B^1v2}"
      - "{O/2v2}"
    bonds:
      - "="
