umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_brf.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "Br#n3#v" "1" "F#n3#v"} :bonds [["0" "1" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "Br#n3#v" "1" "F#n3#v"} :bonds [["0" "1" "1"]] :charge 0 :spin "#u0 #s1"}}}
