umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_ch2_singlet.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#n#v2" "1" "H#v" "2" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#n#v2" "1" "H#v" "2" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"]] :charge 0 :spin "#u0 #s1"}}}
