umol-models-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_cos.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: results
---
category: inorganic_small
atom_typing:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "O#n2#v2"
      - "C#v4"
      - "S#n2#v2"
    bonds:
      - "="
      - "="
counts:
  success: true
  summary:
    atom_count: 3
    bond_count: 2
    topology: Bg
    atoms:
      - "O#n2#v2"
      - "C#v4"
      - "S#n2#v2"
    bonds:
      - "="
      - "="
